#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-44
2015-05-22 Mikhail S. Dubrovin	
- CalibPars - add virtual method status. (for PSAS-139)
- CalibParsStore - prbits=40 -> 255
- GenericCalibPars - m_shape_cmode -> m_shape_cm, add implementation for method status, improve logic for size() and shape()
	
Tag: V00-02-43
2015-05-18 Mikhail S. Dubrovin	
- GenericCalibPars - change methods size() and shape() - return work even for non-loaded, but available constants (PSAS-148)
	
Tag: V00-02-42
2015-05-18 Mikhail S. Dubrovin	
- GenericCalibPars.cpp - improve memory management is destructor (PSAS-148)
	
Tag: V00-02-41
2015-05-12 Mikhail S. Dubrovin	
- GeometryObject.cpp - fix memory management in method evaluate_pixel_coords() (PSAS-147)
	
Tag: V00-02-40
2015-05-12 Mikhail S. Dubrovin	
- In SegGeometryStore.py use singletons for all sensor types SENS2X1:V1, EPIX100:V1, PNCCD:V1 (PSAS-147)
	
Tag: V00-02-39
2015-05-11 Mikhail S. Dubrovin	
- in GeometryObject - delete allocated memory for all non-top objects (PSAS-147).

Tag: V00-02-38
2015-05-11 Mikhail S. Dubrovin	
- In SegGeometryStore use SegGeometryCspad2x1V1 and SegGeometryEpix100V1 as singletons to reduce memory consumption (PSAS-147)
	
Tag: V00-02-37
2015-04-09 Mikhail S. Dubrovin	
- in *.py replace !=None -> is not None, ==None -> is None 

Tag: V00-02-36
2015-04-07 Mikhail S. Dubrovin	
- GenericCalibPars.cpp - set default pixel_bkgd to 0,
- CalibPars.cpp- add map_type2str[PIXEL_BKGD].

Tag: V00-02-35
2015-04-07 Mikhail S. Dubrovin	
- CalibPars, CalibParsStore, GenericCalibPars - add support for calibration types pixel_mask, pixel_bkgd